@@ -81,13 +81,13 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/herry/Monita/pm_server/missing --run aclocal-1.10
+ACLOCAL = ${SHELL} /home/herry/program/pm_server/missing --run aclocal-1.10
 ALL_LINGUAS = 
-AMTAR = ${SHELL} /home/herry/Monita/pm_server/missing --run tar
+AMTAR = ${SHELL} /home/herry/program/pm_server/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/herry/Monita/pm_server/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/herry/Monita/pm_server/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/herry/Monita/pm_server/missing --run automake-1.10
+AUTOCONF = ${SHELL} /home/herry/program/pm_server/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/herry/program/pm_server/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/herry/program/pm_server/missing --run automake-1.10
 AWK = gawk
 CATALOGS = 
 CATOBJEXT = .gmo
@@ -154,7 +154,7 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/herry/Monita/pm_server/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/herry/program/pm_server/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MKINSTALLDIRS = ./mkinstalldirs
 MSGFMT = /usr/bin/msgfmt
@@ -184,10 +184,10 @@ STRIP = strip
 USE_NLS = yes
 VERSION = 0.1
 XGETTEXT = /usr/bin/xgettext
-abs_builddir = /home/herry/Monita/pm_server
-abs_srcdir = /home/herry/Monita/pm_server
-abs_top_builddir = /home/herry/Monita/pm_server
-abs_top_srcdir = /home/herry/Monita/pm_server
+abs_builddir = /home/herry/program/pm_server
+abs_srcdir = /home/herry/program/pm_server
+abs_top_builddir = /home/herry/program/pm_server
+abs_top_srcdir = /home/herry/program/pm_server
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 ac_ct_F77 = 
@@ -216,7 +216,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = $(SHELL) /home/herry/Monita/pm_server/install-sh
+install_sh = $(SHELL) /home/herry/program/pm_server/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
