@@ -341,7 +341,7 @@ Copyright (C) 2006 Free Software Foundation, Inc.
 This config.status script is free software; the Free Software Foundation
 gives unlimited permission to copy, distribute and modify it."
 
-ac_pwd='/home/herry/Monita/pm_server'
+ac_pwd='/home/herry/program/pm_server'
 srcdir='.'
 INSTALL='/usr/bin/install -c'
 MKDIR_P='/bin/mkdir -p'
@@ -548,19 +548,19 @@ s,@am__isrc@,|#_!!_#|,g
 s,@CYGPATH_W@,|#_!!_#|echo,g
 s,@PACKAGE@,|#_!!_#|pm_server,g
 s,@VERSION@,|#_!!_#|0.1,g
-s,@ACLOCAL@,|#_!!_#|${SHELL} /home/herry/Monita/pm_server/missing --run aclocal-1.10,g
-s,@AUTOCONF@,|#_!!_#|${SHELL} /home/herry/Monita/pm_server/missing --run autoconf,g
-s,@AUTOMAKE@,|#_!!_#|${SHELL} /home/herry/Monita/pm_server/missing --run automake-1.10,g
-s,@AUTOHEADER@,|#_!!_#|${SHELL} /home/herry/Monita/pm_server/missing --run autoheader,g
-s,@MAKEINFO@,|#_!!_#|${SHELL} /home/herry/Monita/pm_server/missing --run makeinfo,g
-s,@install_sh@,|#_!!_#|$(SHELL) /home/herry/Monita/pm_server/install-sh,g
+s,@ACLOCAL@,|#_!!_#|${SHELL} /home/herry/program/pm_server/missing --run aclocal-1.10,g
+s,@AUTOCONF@,|#_!!_#|${SHELL} /home/herry/program/pm_server/missing --run autoconf,g
+s,@AUTOMAKE@,|#_!!_#|${SHELL} /home/herry/program/pm_server/missing --run automake-1.10,g
+s,@AUTOHEADER@,|#_!!_#|${SHELL} /home/herry/program/pm_server/missing --run autoheader,g
+s,@MAKEINFO@,|#_!!_#|${SHELL} /home/herry/program/pm_server/missing --run makeinfo,g
+s,@install_sh@,|#_!!_#|$(SHELL) /home/herry/program/pm_server/install-sh,g
 s,@STRIP@,|#_!!_#|strip,g
 s,@INSTALL_STRIP_PROGRAM@,|#_!!_#|$(install_sh) -c -s,g
 s,@mkdir_p@,|#_!!_#|/bin/mkdir -p,g
 s,@AWK@,|#_!!_#|gawk,g
 s,@SET_MAKE@,|#_!!_#|,g
 s,@am__leading_dot@,|#_!!_#|.,g
-s,@AMTAR@,|#_!!_#|${SHELL} /home/herry/Monita/pm_server/missing --run tar,g
+s,@AMTAR@,|#_!!_#|${SHELL} /home/herry/program/pm_server/missing --run tar,g
 s,@am__tar@,|#_!!_#|${AMTAR} chof - "$$tardir",g
 s,@am__untar@,|#_!!_#|${AMTAR} xf -,g
 s,@MAINTAINER_MODE_TRUE@,|#_!!_#|#,g
