@@ -90,13 +90,13 @@ DATA = $(glade_DATA)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/herry/Monita/pm_server/missing --run aclocal-1.10
+ACLOCAL = ${SHELL} /home/herry/program/pm_server/missing --run aclocal-1.10
 ALL_LINGUAS = 
-AMTAR = ${SHELL} /home/herry/Monita/pm_server/missing --run tar
+AMTAR = ${SHELL} /home/herry/program/pm_server/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/herry/Monita/pm_server/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/herry/Monita/pm_server/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/herry/Monita/pm_server/missing --run automake-1.10
+AUTOCONF = ${SHELL} /home/herry/program/pm_server/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/herry/program/pm_server/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/herry/program/pm_server/missing --run automake-1.10
 AWK = gawk
 CATALOGS = 
 CATOBJEXT = .gmo
@@ -163,7 +163,7 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/herry/Monita/pm_server/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/herry/program/pm_server/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MKINSTALLDIRS = ./mkinstalldirs
 MSGFMT = /usr/bin/msgfmt
@@ -193,10 +193,10 @@ STRIP = strip
 USE_NLS = yes
 VERSION = 0.1
 XGETTEXT = /usr/bin/xgettext
-abs_builddir = /home/herry/Monita/pm_server/src
-abs_srcdir = /home/herry/Monita/pm_server/src
-abs_top_builddir = /home/herry/Monita/pm_server
-abs_top_srcdir = /home/herry/Monita/pm_server
+abs_builddir = /home/herry/program/pm_server/src
+abs_srcdir = /home/herry/program/pm_server/src
+abs_top_builddir = /home/herry/program/pm_server
+abs_top_srcdir = /home/herry/program/pm_server
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 ac_ct_F77 = 
@@ -225,7 +225,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = $(SHELL) /home/herry/Monita/pm_server/install-sh
+install_sh = $(SHELL) /home/herry/program/pm_server/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
