@@ -1,4 +1,4 @@
-// generated 2009/4/29 14:49:50 EIT by herry@LancarJaya.(none)
+// generated 2009/5/4 12:41:01 EIT by herry@LancarJaya.(none)
 // using glademm V2.6.0
 //
 // newer (non customized) versions of this file go to main_window.cc_new
@@ -30,4 +30,8 @@ void main_window::on_button_4_clicked()
 
 void main_window::on_button_5_clicked()
 {  
+}
+
+bool main_window::on_main_window_delete_event(GdkEventAny *ev)
+{  return 0;
 }
