@@ -1,4 +1,4 @@
-// generated 2009/4/29 14:49:50 EIT by herry@LancarJaya.(none)
+// generated 2009/5/4 12:41:01 EIT by herry@LancarJaya.(none)
 // using glademm V2.6.0
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -46,13 +46,13 @@
 #include <gtkmm/accelgroup.h>
 #include <gtkmm/label.h>
 #include <gtkmm/combobox.h>
+#include <gtkmm/adjustment.h>
 #include <gtkmm/table.h>
 #include <gtkmm/alignment.h>
 #include <gtkmm/frame.h>
 #include <gtkmm/radiobutton.h>
 #include <gtkmm/box.h>
 #include <gtkmm/viewport.h>
-#include <gtkmm/adjustment.h>
 #include <gtkmm/separator.h>
 #include <gtkmm/scrolledwindow.h>
 #include <gtkmm/notebook.h>
@@ -66,6 +66,10 @@ main_window_glade::main_window_glade(
    button_connect = Gtk::manage(new class Gtk::Button(_("Sambungkan")));
    
    Gtk::ComboBox *combo_com = Gtk::manage(new class Gtk::ComboBox());
+   Gtk::Label *label28 = Gtk::manage(new class Gtk::Label(_("Jumlah Power Meter ")));
+   Gtk::Adjustment *spin_jumlah_pm_adj = Gtk::manage(new class Gtk::Adjustment(5, 0, 5, 1, 10, 10));
+   spin_jumlah_pm = Gtk::manage(new class Gtk::SpinButton(*spin_jumlah_pm_adj, 1, 0));
+   
    Gtk::Table *table1 = Gtk::manage(new class Gtk::Table(2, 2, false));
    Gtk::Alignment *alignment1 = Gtk::manage(new class Gtk::Alignment(0.5, 0.5, 1, 1));
    Gtk::Label *label_frame = Gtk::manage(new class Gtk::Label(_("Setting")));
@@ -150,11 +154,24 @@ main_window_glade::main_window_glade(
    label_com->set_selectable(false);
    button_connect->set_flags(Gtk::CAN_FOCUS);
    button_connect->set_relief(Gtk::RELIEF_NORMAL);
+   label28->set_alignment(0,0.5);
+   label28->set_padding(0,0);
+   label28->set_justify(Gtk::JUSTIFY_LEFT);
+   label28->set_line_wrap(false);
+   label28->set_use_markup(false);
+   label28->set_selectable(false);
+   spin_jumlah_pm->set_flags(Gtk::CAN_FOCUS);
+   spin_jumlah_pm->set_update_policy(Gtk::UPDATE_ALWAYS);
+   spin_jumlah_pm->set_numeric(false);
+   spin_jumlah_pm->set_digits(0);
+   spin_jumlah_pm->set_wrap(false);
    table1->set_row_spacings(0);
    table1->set_col_spacings(0);
    table1->attach(*label_com, 0, 1, 0, 1, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
    table1->attach(*button_connect, 2, 3, 0, 1, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
    table1->attach(*combo_com, 1, 2, 0, 1, Gtk::EXPAND|Gtk::FILL, Gtk::FILL, 0, 0);
+   table1->attach(*label28, 0, 1, 1, 2, Gtk::FILL, Gtk::AttachOptions(), 0, 0);
+   table1->attach(*spin_jumlah_pm, 1, 2, 1, 2, Gtk::EXPAND|Gtk::FILL, Gtk::AttachOptions(), 0, 0);
    alignment1->add(*table1);
    label_frame->set_alignment(0.5,0.5);
    label_frame->set_padding(0,0);
@@ -480,6 +497,8 @@ main_window_glade::main_window_glade(
    label_com->show();
    button_connect->show();
    combo_com->show();
+   label28->show();
+   spin_jumlah_pm->show();
    table1->show();
    alignment1->show();
    label_frame->show();
@@ -553,6 +572,7 @@ main_window_glade::main_window_glade(
    button_3->signal_clicked().connect(SigC::slot(*this, &main_window_glade::on_button_3_clicked), false);
    button_4->signal_clicked().connect(SigC::slot(*this, &main_window_glade::on_button_4_clicked), false);
    button_5->signal_clicked().connect(SigC::slot(*this, &main_window_glade::on_button_5_clicked), false);
+   main_window->signal_delete_event().connect(SigC::slot(*this, &main_window_glade::on_main_window_delete_event), false);
 }
 
 main_window_glade::~main_window_glade()
