@@ -1,4 +1,4 @@
-// generated 2009/4/29 14:49:50 EIT by herry@LancarJaya.(none)
+// generated 2009/5/4 12:41:01 EIT by herry@LancarJaya.(none)
 // using glademm V2.6.0
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -33,6 +33,7 @@ public:
 
 #include <gtkmm/window.h>
 #include <gtkmm/button.h>
+#include <gtkmm/spinbutton.h>
 #include <gtkmm/label.h>
 #include <gtkmm/treeview.h>
 #include <gtkmm/statusbar.h>
@@ -44,6 +45,7 @@ class main_window_glade : public Gtk::Window
 public:
         class Gtk::Window * main_window;
         class Gtk::Button * button_connect;
+        class Gtk::SpinButton * spin_jumlah_pm;
         class Gtk::Label * label_kw;
         class Gtk::Label * label_kva;
         class Gtk::Label * label_kvar;
@@ -80,5 +82,6 @@ private:
         virtual void on_button_3_clicked() = 0;
         virtual void on_button_4_clicked() = 0;
         virtual void on_button_5_clicked() = 0;
+        virtual bool on_main_window_delete_event(GdkEventAny *ev) = 0;
 };
 #endif
