@@ -154,3 +154,9 @@
 
 2009/4/29 14:49:50 EIT
 	update files from .glade file
+
+2009/4/30 13:41:19 EIT
+	update files from .glade file
+
+2009/5/4 12:41:01 EIT
+	update files from .glade file
